changed the title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
     <meta charset="utf-8">
-    <title>Beatzy.io - AI Playlist Generator For Spotify, SoundCloud &amp; Clarity</title>
+    <title>Beatzy.io</title>
     <meta content="Beatzy.io - AI Playlist Generator For Spotify, SoundCloud &amp; Clarity" property="og:title">
     <meta content="Beatzy.io - AI Playlist Generator For Spotify, SoundCloud &amp; Clarity" property="twitter:title">
     <meta content="width=device-width, initial-scale=1" name="viewport">
