--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html data-wf-page="66e3cd3b928077aa991378a5" data-wf-site="66e3cd3b928077aa9913786f" lang="en">
 
 <head>
-  <!-- <meta charset="UTF-8" />
+  <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title> -->
+    <title>Vite + React</title>
 
 
 
